--- a/contact.html
+++ b/contact.html
@@ -25,27 +25,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-2 my-md-0" >
                      <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-2 my-md-0">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <!-- <li class="nav-item">
-                     <a class="nav-link" href="services.html">Services</a>
-                  </li> -->
-                  <li class="nav-item dropdown">
+                  <li class="nav-item mx-1 my-2 my-md-0">
+                     <a class="nav-link" href="portfolio-2-col.html">Action</a>
+                  </li>
+                  <!-- <li class="nav-item dropdown mx-1 my-2 my-md-0">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
+                        <a class="dropdown-item" href="portfolio-1-col.html">Projects</a>
                         <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
-                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
                      </div>
-                  </li>
+                  </li> -->
                   <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
@@ -66,7 +66,7 @@
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
                   </li> -->
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-2 my-md-0">
                      <a class="nav-link active" href="contact.html">Contact</a>
                   </li>
                </ul>
