--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-2 my-md-0">
                      <a class="nav-link active" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-2 my-md-0">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <!-- <li class="nav-item">
-                     <a class="nav-link" href="services.html">Services</a>
-                  </li> -->
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Portfolio
-                     </a>
-                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
-                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
-                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
-                     </div>
+                  <li class="nav-item mx-1 my-2 my-md-0">
+                     <a class="nav-link" href="portfolio-2-col.html">Action</a>
                   </li>
+                  <!-- <li class="nav-item dropdown row">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Portfolio
+                     </a>
+                     <span class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="portfolio-1-col.html">Projects</a>
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                     </span>
+                  </li> -->
                   <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
@@ -68,7 +68,7 @@
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
                   </li> -->
-                  <li class="nav-item">
+                  <li class="nav-item mx-1 my-1 my-md-0">
                      <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                </ul>
